--- a/.classpath
+++ b/.classpath
@@ -14,7 +14,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/1027/JSPProjects/jars/jstl.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/1027/JSPProjects/jars/jstl-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/1027/JSPProjects/jars/servlet-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/1027/JSPProjects/jars/standard.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
